# shapes_riot

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  _utils.py  check_clang_format.py  check_clang_tidy.py  format_all.py  install_libs.py
.circleci/: config.yml
.github/workflows/: main.yml
cmake/: doc_target.Doxyfile  doc_target.cmake  download.cmake  file_embed.asm  file_embed.cmake  file_embed.h  install_vcpkg.cmake  install_vcpkg.py  set_defaults.cmake  test_target_cpp.cmake  third_party.cmake  vcpkg.cmake  vcpkg.py
gfx/: CMakeLists.txt  draw_list.cpp  drawer.cpp  font.cpp  glfw_handle.cpp  shader.cpp  texture.cpp  texture_view.cpp  transformation.test.cpp  window.cpp  window_state.cpp
gfx/include/gfx/: anchor.h  draw_list.h  drawer.h  font.h  gl_object.h  glfw_handle.h  shader.h  texture.h  texture_view.h  transform.h  transformation.h  vertex.h  window.h  window_event.h  window_state.h
gfx/include/gfx/ui/: button.h  label.h  vertical_layout.h  widget.h
gfx/src/: draw_list.cpp  drawer.cpp  font.cpp  glfw_handle.cpp  shader.cpp  texture.cpp  window.cpp  window_state.cpp
gfx/src/ui/: button.cpp  label.cpp  vertical_layout.cpp  widget.cpp
gfx/test/: transformation.test.cpp
gfx/ui/: button.cpp  vertical_layout.cpp  widget.cpp
shapes_riot/: CMakeLists.txt  box.h  bullet_manager.h  camera.cpp  camera.h  enemy.cpp  enemy.h  enemy_manager.cpp  enemy_manager.h  game_screen.cpp  game_screen.h  health_bar.cpp  health_bar.h  main.cpp  main_menu.cpp  main_menu.h  main_window.cpp  main_window.h  player.cpp  player.h  rectangle.h  screen.h  screen_stack.cpp  screen_stack.h  weapon.h
shapes_riot/include/: bullet.h  bullet_manager.h  camera.h  enemy.h  enemy_manager.h  game_screen.h  health_bar.h  hitbox.h  hud.h  main_menu.h  map.h  perf.h  player.h  screen_stack.h
shapes_riot/src/: bullet.cpp  bullet_manager.cpp  camera.cpp  enemy.cpp  enemy_manager.cpp  game_screen.cpp  health_bar.cpp  hitbox.cpp  hud.cpp  main.cpp  main_menu.cpp  map.cpp  perf.cpp  player.cpp  screen_stack.cpp  weapon.cpp
utils/: CMakeLists.txt  bind_front.test.cpp  config.cpp  config.test.cpp  exception.cpp  guarded.test.cpp  log.cpp  logger.cpp  logging.cpp  make_array.test.cpp  matrix.test.cpp  os.cpp  paths.cpp  rand.cpp  resource_manager.test.cpp  resources_manager.cpp  resources_manager.test.cpp  scope_exit.cpp  scope_exit.test.cpp  shared_handle.test.cpp  span.test.cpp  thread_pool.test.cpp
utils/include/utils/: any.h  any_detail.h  bind_front.h  c_ptr.h  circular.h  config.h  consume_queue.h  exception.h  flag.h  function.h  function_ref.h  global_handle.h  guarded.h  log.h  logger.h  logging.h  make_array.h  math.h  matrix.h  os.h  pp.h  rand.h  resource_manager.h  resources_handle.h  resources_manager.h  scope_exit.cpp  scope_exit.h  shared_handle.h  span.h  task.h  thread_pool.h  transform.h  uninitialized.h  vec.h  vec_detail.h
utils/src/: any.cpp  config.cpp  exception.cpp  logger.cpp  logging.cpp  os.cpp  paths.cpp  thread_pool.cpp
utils/test/: any.test.cpp  circular.test.cpp  config.test.cpp  function_ref.test.cpp  global_handle.test.cpp  guarded.test.cpp  make_array.test.cpp  math.test.cpp  matrix.test.cpp  resource_manager.test.cpp  span.test.cpp  static_function.test.cpp  thread_pool.test.cpp  uninitialized.test.cpp  vec.test.cpp
vcpkg_config/ports/glad/: CONTROL  portfile.cmake
